# HoneyWellBees

./: Cargo.toml  README.md
HoneyWellBees-js/src/adapters/: BostromLedgerClient.js  JetsonEdgeGateway.js  LoRaZigbeeBridge.js
HoneyWellBees-js/src/core/: HiveActuationFirewall.js  HiveBandStateEstimator.js  HiveNanoDataMeter.js  HiveNeuromorphicBridge.js  HivePolicyBridge.js  HiveTelemetryNormalizer.js  HoneyWellBeesKernel.js
HoneyWellBees-js/src/intel/: HiveAnomalyDetector.js  HivePatternArchivist.js  HiveRiskAdvisor.js
aln/: honeywellbees_policies.aln
aln/examples/: baseline_phoenix_hive.aln
crates/bee_biostretched_policy/: Cargo.toml
crates/bee_biostretched_policy/src/: aln_export.rs  bundle.rs  cli.rs  compiler.rs  efsa_iucn.rs  main.rs  model.rs  signing.rs  storage.rs  wasm_api.rs
crates/hive_cpfw/: Cargo.toml
crates/hive_cpfw/src/: enforcer.rs  lib.rs  logging.rs  multisig.rs  policy.rs  request.rs  state.rs
crates/hive_cpfw/src/backend/: fan.rs  heater.rs  led.rs  mock.rs  mod.rs
crates/hive_cpfw/src/integration/: mod.rs  policy_bridge.rs  shard_bridge.rs
crates/hive_cpfw/src/sim/: mod.rs  scenario_42d_disturbance.rs
crates/hive_shard_runtime/: Cargo.toml
crates/hive_shard_runtime/src/: actuator.rs  band.rs  config.rs  controller.rs  lib.rs  limits.rs  sensor.rs  timebase.rs
crates/hive_shard_runtime/src/board/: mock.rs  mod.rs  ra.rs  stm32.rs
crates/hive_shard_runtime/src/examples/: dummy_snn_controller.rs
tools/governance_tx_schema/: Cargo.toml
tools/governance_tx_schema/src/: lib.rs
wasm/bee_biostretched_policy_wasm/: Cargo.toml
wasm/bee_biostretched_policy_wasm/src/: lib.rs
web-console/: package.json  tsconfig.json
web-console/src/: api.ts  dashboard.tsx  index.ts
