[workspace]
members = [
    "crates/hive_shard_runtime",
    "crates/bee_biostretched_policy",
    "crates/hive_cpfw",
    "wasm/bee_biostretched_policy_wasm",
    "tools/governance_tx_schema",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
name = "HoneyWellBees"
version = "0.1.0"
description = "HoneyWellBees: neuromorphic, cyber-physical protection layer for honeybee colonies."

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
bitflags = "2.5"
heapless = "0.8"
embedded-hal = "1.0.0"
defmt = "0.3"
ed25519-dalek = "2.1"
rand_core = "0.6"
time = { version = "0.3", features = ["macros"] }
bls12_381 = "0.8"
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = "0.2"
